--- a/datasize/src/github.com/johnstarich/go/datasize/size_test.go.html
+++ b/datasize/src/github.com/johnstarich/go/datasize/size_test.go.html
@@ -66,141 +66,165 @@
 <span id="L9" class="ln">     9  </span>)
 <span id="L10" class="ln">    10  </span>
 <span id="L11" class="ln">    11  </span>func TestNew(t *testing.T) {
-<span id="L12" class="ln">    12  </span>	assert.Equal(t, Size{value: big.NewInt(2)}, New(2))
-<span id="L13" class="ln">    13  </span>}
-<span id="L14" class="ln">    14  </span>
-<span id="L15" class="ln">    15  </span>func TestBytes(t *testing.T) {
-<span id="L16" class="ln">    16  </span>	assert.Equal(t, int64(2), Bytes(2).Bytes())
-<span id="L17" class="ln">    17  </span>}
-<span id="L18" class="ln">    18  </span>
-<span id="L19" class="ln">    19  </span>func TestKilobytes(t *testing.T) {
-<span id="L20" class="ln">    20  </span>	assert.Equal(t, New(2e3), Kilobytes(2))
-<span id="L21" class="ln">    21  </span>}
-<span id="L22" class="ln">    22  </span>
-<span id="L23" class="ln">    23  </span>func TestMegabytes(t *testing.T) {
-<span id="L24" class="ln">    24  </span>	assert.Equal(t, New(2e6), Megabytes(2))
-<span id="L25" class="ln">    25  </span>}
-<span id="L26" class="ln">    26  </span>
-<span id="L27" class="ln">    27  </span>func TestGigabytes(t *testing.T) {
-<span id="L28" class="ln">    28  </span>	assert.Equal(t, New(2e9), Gigabytes(2))
+<span id="L12" class="ln">    12  </span>	t.Parallel()
+<span id="L13" class="ln">    13  </span>	assert.Equal(t, Size{value: big.NewInt(2)}, New(2))
+<span id="L14" class="ln">    14  </span>}
+<span id="L15" class="ln">    15  </span>
+<span id="L16" class="ln">    16  </span>func TestBytes(t *testing.T) {
+<span id="L17" class="ln">    17  </span>	t.Parallel()
+<span id="L18" class="ln">    18  </span>	assert.Equal(t, int64(2), Bytes(2).Bytes())
+<span id="L19" class="ln">    19  </span>}
+<span id="L20" class="ln">    20  </span>
+<span id="L21" class="ln">    21  </span>func TestKilobytes(t *testing.T) {
+<span id="L22" class="ln">    22  </span>	t.Parallel()
+<span id="L23" class="ln">    23  </span>	assert.Equal(t, New(2e3), Kilobytes(2))
+<span id="L24" class="ln">    24  </span>}
+<span id="L25" class="ln">    25  </span>
+<span id="L26" class="ln">    26  </span>func TestMegabytes(t *testing.T) {
+<span id="L27" class="ln">    27  </span>	t.Parallel()
+<span id="L28" class="ln">    28  </span>	assert.Equal(t, New(2e6), Megabytes(2))
 <span id="L29" class="ln">    29  </span>}
 <span id="L30" class="ln">    30  </span>
-<span id="L31" class="ln">    31  </span>func TestTerabytes(t *testing.T) {
-<span id="L32" class="ln">    32  </span>	assert.Equal(t, New(2e12), Terabytes(2))
-<span id="L33" class="ln">    33  </span>}
-<span id="L34" class="ln">    34  </span>
-<span id="L35" class="ln">    35  </span>func TestPetabytes(t *testing.T) {
-<span id="L36" class="ln">    36  </span>	assert.Equal(t, New(2e15), Petabytes(2))
-<span id="L37" class="ln">    37  </span>}
-<span id="L38" class="ln">    38  </span>
-<span id="L39" class="ln">    39  </span>func TestExabytes(t *testing.T) {
-<span id="L40" class="ln">    40  </span>	assert.Equal(t, New(2e18), Exabytes(2))
-<span id="L41" class="ln">    41  </span>}
-<span id="L42" class="ln">    42  </span>
-<span id="L43" class="ln">    43  </span>func TestZettabytes(t *testing.T) {
-<span id="L44" class="ln">    44  </span>	zetta := new(big.Int).Mul(big.NewInt(2e18), big.NewInt(1e3))
-<span id="L45" class="ln">    45  </span>	assert.Equal(t, NewFromInt(zetta), Zettabytes(2))
-<span id="L46" class="ln">    46  </span>}
-<span id="L47" class="ln">    47  </span>
-<span id="L48" class="ln">    48  </span>func TestYottabytes(t *testing.T) {
-<span id="L49" class="ln">    49  </span>	yotta := new(big.Int).Mul(big.NewInt(2e18), big.NewInt(1e6))
-<span id="L50" class="ln">    50  </span>	assert.Equal(t, NewFromInt(yotta), Yottabytes(2))
-<span id="L51" class="ln">    51  </span>}
-<span id="L52" class="ln">    52  </span>
-<span id="L53" class="ln">    53  </span>func TestKibibytes(t *testing.T) {
-<span id="L54" class="ln">    54  </span>	assert.Equal(t, New(2&lt;&lt;10), Kibibytes(2))
+<span id="L31" class="ln">    31  </span>func TestGigabytes(t *testing.T) {
+<span id="L32" class="ln">    32  </span>	t.Parallel()
+<span id="L33" class="ln">    33  </span>	assert.Equal(t, New(2e9), Gigabytes(2))
+<span id="L34" class="ln">    34  </span>}
+<span id="L35" class="ln">    35  </span>
+<span id="L36" class="ln">    36  </span>func TestTerabytes(t *testing.T) {
+<span id="L37" class="ln">    37  </span>	t.Parallel()
+<span id="L38" class="ln">    38  </span>	assert.Equal(t, New(2e12), Terabytes(2))
+<span id="L39" class="ln">    39  </span>}
+<span id="L40" class="ln">    40  </span>
+<span id="L41" class="ln">    41  </span>func TestPetabytes(t *testing.T) {
+<span id="L42" class="ln">    42  </span>	t.Parallel()
+<span id="L43" class="ln">    43  </span>	assert.Equal(t, New(2e15), Petabytes(2))
+<span id="L44" class="ln">    44  </span>}
+<span id="L45" class="ln">    45  </span>
+<span id="L46" class="ln">    46  </span>func TestExabytes(t *testing.T) {
+<span id="L47" class="ln">    47  </span>	t.Parallel()
+<span id="L48" class="ln">    48  </span>	assert.Equal(t, New(2e18), Exabytes(2))
+<span id="L49" class="ln">    49  </span>}
+<span id="L50" class="ln">    50  </span>
+<span id="L51" class="ln">    51  </span>func TestZettabytes(t *testing.T) {
+<span id="L52" class="ln">    52  </span>	t.Parallel()
+<span id="L53" class="ln">    53  </span>	zetta := new(big.Int).Mul(big.NewInt(2e18), big.NewInt(1e3))
+<span id="L54" class="ln">    54  </span>	assert.Equal(t, NewFromInt(zetta), Zettabytes(2))
 <span id="L55" class="ln">    55  </span>}
 <span id="L56" class="ln">    56  </span>
-<span id="L57" class="ln">    57  </span>func TestMebibytes(t *testing.T) {
-<span id="L58" class="ln">    58  </span>	assert.Equal(t, New(2&lt;&lt;20), Mebibytes(2))
-<span id="L59" class="ln">    59  </span>}
-<span id="L60" class="ln">    60  </span>
-<span id="L61" class="ln">    61  </span>func TestGibibytes(t *testing.T) {
-<span id="L62" class="ln">    62  </span>	assert.Equal(t, New(2&lt;&lt;30), Gibibytes(2))
-<span id="L63" class="ln">    63  </span>}
-<span id="L64" class="ln">    64  </span>
-<span id="L65" class="ln">    65  </span>func TestTebibytes(t *testing.T) {
-<span id="L66" class="ln">    66  </span>	assert.Equal(t, New(2&lt;&lt;40), Tebibytes(2))
-<span id="L67" class="ln">    67  </span>}
-<span id="L68" class="ln">    68  </span>
-<span id="L69" class="ln">    69  </span>func TestPebibytes(t *testing.T) {
-<span id="L70" class="ln">    70  </span>	assert.Equal(t, New(2&lt;&lt;50), Pebibytes(2))
+<span id="L57" class="ln">    57  </span>func TestYottabytes(t *testing.T) {
+<span id="L58" class="ln">    58  </span>	t.Parallel()
+<span id="L59" class="ln">    59  </span>	yotta := new(big.Int).Mul(big.NewInt(2e18), big.NewInt(1e6))
+<span id="L60" class="ln">    60  </span>	assert.Equal(t, NewFromInt(yotta), Yottabytes(2))
+<span id="L61" class="ln">    61  </span>}
+<span id="L62" class="ln">    62  </span>
+<span id="L63" class="ln">    63  </span>func TestKibibytes(t *testing.T) {
+<span id="L64" class="ln">    64  </span>	t.Parallel()
+<span id="L65" class="ln">    65  </span>	assert.Equal(t, New(2&lt;&lt;10), Kibibytes(2))
+<span id="L66" class="ln">    66  </span>}
+<span id="L67" class="ln">    67  </span>
+<span id="L68" class="ln">    68  </span>func TestMebibytes(t *testing.T) {
+<span id="L69" class="ln">    69  </span>	t.Parallel()
+<span id="L70" class="ln">    70  </span>	assert.Equal(t, New(2&lt;&lt;20), Mebibytes(2))
 <span id="L71" class="ln">    71  </span>}
 <span id="L72" class="ln">    72  </span>
-<span id="L73" class="ln">    73  </span>func TestExbibytes(t *testing.T) {
-<span id="L74" class="ln">    74  </span>	assert.Equal(t, New(2&lt;&lt;60), Exbibytes(2))
-<span id="L75" class="ln">    75  </span>}
-<span id="L76" class="ln">    76  </span>
-<span id="L77" class="ln">    77  </span>func TestZebibytes(t *testing.T) {
-<span id="L78" class="ln">    78  </span>	zebi := new(big.Int).Mul(big.NewInt(2&lt;&lt;60), big.NewInt(1&lt;&lt;10))
-<span id="L79" class="ln">    79  </span>	assert.Equal(t, NewFromInt(zebi), Zebibytes(2))
-<span id="L80" class="ln">    80  </span>}
-<span id="L81" class="ln">    81  </span>
-<span id="L82" class="ln">    82  </span>func TestYobibytes(t *testing.T) {
-<span id="L83" class="ln">    83  </span>	yobi := new(big.Int).Mul(big.NewInt(2&lt;&lt;60), big.NewInt(1&lt;&lt;20))
-<span id="L84" class="ln">    84  </span>	assert.Equal(t, NewFromInt(yobi), Yobibytes(2))
-<span id="L85" class="ln">    85  </span>}
-<span id="L86" class="ln">    86  </span>
-<span id="L87" class="ln">    87  </span>func TestFormatSI(t *testing.T) {
-<span id="L88" class="ln">    88  </span>	for _, tc := range []struct {
-<span id="L89" class="ln">    89  </span>		input         float64
-<span id="L90" class="ln">    90  </span>		expectedValue float64
-<span id="L91" class="ln">    91  </span>		expectedUnit  string
-<span id="L92" class="ln">    92  </span>	}{
-<span id="L93" class="ln">    93  </span>		{0, 0, &#34;B&#34;},
-<span id="L94" class="ln">    94  </span>		{1, 1, &#34;B&#34;},
-<span id="L95" class="ln">    95  </span>		{2e3, 2, &#34;kB&#34;},
-<span id="L96" class="ln">    96  </span>		{2345, 2.345, &#34;kB&#34;},
-<span id="L97" class="ln">    97  </span>		{2e6, 2, &#34;MB&#34;},
-<span id="L98" class="ln">    98  </span>		{7.893e6, 7.893, &#34;MB&#34;},
-<span id="L99" class="ln">    99  </span>		{2e9, 2, &#34;GB&#34;},
-<span id="L100" class="ln">   100  </span>		{2e12, 2, &#34;TB&#34;},
-<span id="L101" class="ln">   101  </span>		{2e15, 2, &#34;PB&#34;},
-<span id="L102" class="ln">   102  </span>		{2e18, 2, &#34;EB&#34;},
-<span id="L103" class="ln">   103  </span>		{2e21, 2, &#34;ZB&#34;},
-<span id="L104" class="ln">   104  </span>		{2e24, 2, &#34;YB&#34;},
-<span id="L105" class="ln">   105  </span>	} {
-<span id="L106" class="ln">   106  </span>		t.Run(fmt.Sprintf(&#34;%g&#34;, tc.input), func(t *testing.T) {
-<span id="L107" class="ln">   107  </span>			i, _ := big.NewFloat(tc.input).Int(nil)
-<span id="L108" class="ln">   108  </span>			num := NewFromInt(i)
-<span id="L109" class="ln">   109  </span>			value, unit := num.FormatSI()
-<span id="L110" class="ln">   110  </span>			assert.Equal(t, tc.expectedValue, value)
-<span id="L111" class="ln">   111  </span>			assert.Equal(t, tc.expectedUnit, unit)
-<span id="L112" class="ln">   112  </span>
-<span id="L113" class="ln">   113  </span>			assert.Equal(t, fmt.Sprintf(&#34;%g %s&#34;, tc.expectedValue, tc.expectedUnit), num.String())
-<span id="L114" class="ln">   114  </span>		})
-<span id="L115" class="ln">   115  </span>	}
-<span id="L116" class="ln">   116  </span>}
-<span id="L117" class="ln">   117  </span>
-<span id="L118" class="ln">   118  </span>func TestFormatIEC(t *testing.T) {
-<span id="L119" class="ln">   119  </span>	for _, tc := range []struct {
-<span id="L120" class="ln">   120  </span>		input         float64
-<span id="L121" class="ln">   121  </span>		expectedValue float64
-<span id="L122" class="ln">   122  </span>		expectedUnit  string
-<span id="L123" class="ln">   123  </span>	}{
-<span id="L124" class="ln">   124  </span>		{0, 0, &#34;B&#34;},
-<span id="L125" class="ln">   125  </span>		{1, 1, &#34;B&#34;},
-<span id="L126" class="ln">   126  </span>		{2 &lt;&lt; 10, 2, &#34;KiB&#34;},
-<span id="L127" class="ln">   127  </span>		{2345, 2.290, &#34;KiB&#34;},
-<span id="L128" class="ln">   128  </span>		{2 &lt;&lt; 20, 2, &#34;MiB&#34;},
-<span id="L129" class="ln">   129  </span>		{7893 &lt;&lt; 20, 7.708, &#34;GiB&#34;},
-<span id="L130" class="ln">   130  </span>		{2 &lt;&lt; 30, 2, &#34;GiB&#34;},
-<span id="L131" class="ln">   131  </span>		{2 &lt;&lt; 40, 2, &#34;TiB&#34;},
-<span id="L132" class="ln">   132  </span>		{2 &lt;&lt; 50, 2, &#34;PiB&#34;},
-<span id="L133" class="ln">   133  </span>		{2 &lt;&lt; 60, 2, &#34;EiB&#34;},
-<span id="L134" class="ln">   134  </span>		{2 &lt;&lt; 70, 2, &#34;ZiB&#34;},
-<span id="L135" class="ln">   135  </span>		{2 &lt;&lt; 80, 2, &#34;YiB&#34;},
-<span id="L136" class="ln">   136  </span>	} {
-<span id="L137" class="ln">   137  </span>		t.Run(fmt.Sprintf(&#34;%g&#34;, tc.input), func(t *testing.T) {
-<span id="L138" class="ln">   138  </span>			i, _ := big.NewFloat(tc.input).Int(nil)
-<span id="L139" class="ln">   139  </span>			num := NewFromInt(i)
-<span id="L140" class="ln">   140  </span>			value, unit := num.FormatIEC()
-<span id="L141" class="ln">   141  </span>			assert.InDelta(t, tc.expectedValue, value, 0.0001)
-<span id="L142" class="ln">   142  </span>			assert.Equal(t, tc.expectedUnit, unit)
-<span id="L143" class="ln">   143  </span>		})
-<span id="L144" class="ln">   144  </span>	}
-<span id="L145" class="ln">   145  </span>}
-<span id="L146" class="ln">   146  </span>
+<span id="L73" class="ln">    73  </span>func TestGibibytes(t *testing.T) {
+<span id="L74" class="ln">    74  </span>	t.Parallel()
+<span id="L75" class="ln">    75  </span>	assert.Equal(t, New(2&lt;&lt;30), Gibibytes(2))
+<span id="L76" class="ln">    76  </span>}
+<span id="L77" class="ln">    77  </span>
+<span id="L78" class="ln">    78  </span>func TestTebibytes(t *testing.T) {
+<span id="L79" class="ln">    79  </span>	t.Parallel()
+<span id="L80" class="ln">    80  </span>	assert.Equal(t, New(2&lt;&lt;40), Tebibytes(2))
+<span id="L81" class="ln">    81  </span>}
+<span id="L82" class="ln">    82  </span>
+<span id="L83" class="ln">    83  </span>func TestPebibytes(t *testing.T) {
+<span id="L84" class="ln">    84  </span>	t.Parallel()
+<span id="L85" class="ln">    85  </span>	assert.Equal(t, New(2&lt;&lt;50), Pebibytes(2))
+<span id="L86" class="ln">    86  </span>}
+<span id="L87" class="ln">    87  </span>
+<span id="L88" class="ln">    88  </span>func TestExbibytes(t *testing.T) {
+<span id="L89" class="ln">    89  </span>	t.Parallel()
+<span id="L90" class="ln">    90  </span>	assert.Equal(t, New(2&lt;&lt;60), Exbibytes(2))
+<span id="L91" class="ln">    91  </span>}
+<span id="L92" class="ln">    92  </span>
+<span id="L93" class="ln">    93  </span>func TestZebibytes(t *testing.T) {
+<span id="L94" class="ln">    94  </span>	t.Parallel()
+<span id="L95" class="ln">    95  </span>	zebi := new(big.Int).Mul(big.NewInt(2&lt;&lt;60), big.NewInt(1&lt;&lt;10))
+<span id="L96" class="ln">    96  </span>	assert.Equal(t, NewFromInt(zebi), Zebibytes(2))
+<span id="L97" class="ln">    97  </span>}
+<span id="L98" class="ln">    98  </span>
+<span id="L99" class="ln">    99  </span>func TestYobibytes(t *testing.T) {
+<span id="L100" class="ln">   100  </span>	t.Parallel()
+<span id="L101" class="ln">   101  </span>	yobi := new(big.Int).Mul(big.NewInt(2&lt;&lt;60), big.NewInt(1&lt;&lt;20))
+<span id="L102" class="ln">   102  </span>	assert.Equal(t, NewFromInt(yobi), Yobibytes(2))
+<span id="L103" class="ln">   103  </span>}
+<span id="L104" class="ln">   104  </span>
+<span id="L105" class="ln">   105  </span>func TestFormatSI(t *testing.T) {
+<span id="L106" class="ln">   106  </span>	t.Parallel()
+<span id="L107" class="ln">   107  </span>	for _, tc := range []struct {
+<span id="L108" class="ln">   108  </span>		input         float64
+<span id="L109" class="ln">   109  </span>		expectedValue float64
+<span id="L110" class="ln">   110  </span>		expectedUnit  string
+<span id="L111" class="ln">   111  </span>	}{
+<span id="L112" class="ln">   112  </span>		{0, 0, &#34;B&#34;},
+<span id="L113" class="ln">   113  </span>		{1, 1, &#34;B&#34;},
+<span id="L114" class="ln">   114  </span>		{2e3, 2, &#34;kB&#34;},
+<span id="L115" class="ln">   115  </span>		{2345, 2.345, &#34;kB&#34;},
+<span id="L116" class="ln">   116  </span>		{2e6, 2, &#34;MB&#34;},
+<span id="L117" class="ln">   117  </span>		{7.893e6, 7.893, &#34;MB&#34;},
+<span id="L118" class="ln">   118  </span>		{2e9, 2, &#34;GB&#34;},
+<span id="L119" class="ln">   119  </span>		{2e12, 2, &#34;TB&#34;},
+<span id="L120" class="ln">   120  </span>		{2e15, 2, &#34;PB&#34;},
+<span id="L121" class="ln">   121  </span>		{2e18, 2, &#34;EB&#34;},
+<span id="L122" class="ln">   122  </span>		{2e21, 2, &#34;ZB&#34;},
+<span id="L123" class="ln">   123  </span>		{2e24, 2, &#34;YB&#34;},
+<span id="L124" class="ln">   124  </span>	} {
+<span id="L125" class="ln">   125  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
+<span id="L126" class="ln">   126  </span>		t.Run(fmt.Sprintf(&#34;%g&#34;, tc.input), func(t *testing.T) {
+<span id="L127" class="ln">   127  </span>			t.Parallel()
+<span id="L128" class="ln">   128  </span>			i, _ := big.NewFloat(tc.input).Int(nil)
+<span id="L129" class="ln">   129  </span>			num := NewFromInt(i)
+<span id="L130" class="ln">   130  </span>			value, unit := num.FormatSI()
+<span id="L131" class="ln">   131  </span>			assert.Equal(t, tc.expectedValue, value)
+<span id="L132" class="ln">   132  </span>			assert.Equal(t, tc.expectedUnit, unit)
+<span id="L133" class="ln">   133  </span>
+<span id="L134" class="ln">   134  </span>			assert.Equal(t, fmt.Sprintf(&#34;%g %s&#34;, tc.expectedValue, tc.expectedUnit), num.String())
+<span id="L135" class="ln">   135  </span>		})
+<span id="L136" class="ln">   136  </span>	}
+<span id="L137" class="ln">   137  </span>}
+<span id="L138" class="ln">   138  </span>
+<span id="L139" class="ln">   139  </span>func TestFormatIEC(t *testing.T) {
+<span id="L140" class="ln">   140  </span>	t.Parallel()
+<span id="L141" class="ln">   141  </span>	for _, tc := range []struct {
+<span id="L142" class="ln">   142  </span>		input         float64
+<span id="L143" class="ln">   143  </span>		expectedValue float64
+<span id="L144" class="ln">   144  </span>		expectedUnit  string
+<span id="L145" class="ln">   145  </span>	}{
+<span id="L146" class="ln">   146  </span>		{0, 0, &#34;B&#34;},
+<span id="L147" class="ln">   147  </span>		{1, 1, &#34;B&#34;},
+<span id="L148" class="ln">   148  </span>		{2 &lt;&lt; 10, 2, &#34;KiB&#34;},
+<span id="L149" class="ln">   149  </span>		{2345, 2.290, &#34;KiB&#34;},
+<span id="L150" class="ln">   150  </span>		{2 &lt;&lt; 20, 2, &#34;MiB&#34;},
+<span id="L151" class="ln">   151  </span>		{7893 &lt;&lt; 20, 7.708, &#34;GiB&#34;},
+<span id="L152" class="ln">   152  </span>		{2 &lt;&lt; 30, 2, &#34;GiB&#34;},
+<span id="L153" class="ln">   153  </span>		{2 &lt;&lt; 40, 2, &#34;TiB&#34;},
+<span id="L154" class="ln">   154  </span>		{2 &lt;&lt; 50, 2, &#34;PiB&#34;},
+<span id="L155" class="ln">   155  </span>		{2 &lt;&lt; 60, 2, &#34;EiB&#34;},
+<span id="L156" class="ln">   156  </span>		{2 &lt;&lt; 70, 2, &#34;ZiB&#34;},
+<span id="L157" class="ln">   157  </span>		{2 &lt;&lt; 80, 2, &#34;YiB&#34;},
+<span id="L158" class="ln">   158  </span>	} {
+<span id="L159" class="ln">   159  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
+<span id="L160" class="ln">   160  </span>		t.Run(fmt.Sprintf(&#34;%g&#34;, tc.input), func(t *testing.T) {
+<span id="L161" class="ln">   161  </span>			t.Parallel()
+<span id="L162" class="ln">   162  </span>			i, _ := big.NewFloat(tc.input).Int(nil)
+<span id="L163" class="ln">   163  </span>			num := NewFromInt(i)
+<span id="L164" class="ln">   164  </span>			value, unit := num.FormatIEC()
+<span id="L165" class="ln">   165  </span>			assert.InDelta(t, tc.expectedValue, value, 0.0001)
+<span id="L166" class="ln">   166  </span>			assert.Equal(t, tc.expectedUnit, unit)
+<span id="L167" class="ln">   167  </span>		})
+<span id="L168" class="ln">   168  </span>	}
+<span id="L169" class="ln">   169  </span>}
+<span id="L170" class="ln">   170  </span>
 </pre><p></p>
 
 <div id="footer">
