--- a/dns/src/github.com/johnstarich/go/dns/init/init_test.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/init/init_test.go.html
@@ -65,9 +65,10 @@
 <span id="L8" class="ln">     8  </span>)
 <span id="L9" class="ln">     9  </span>
 <span id="L10" class="ln">    10  </span>func TestInit(t *testing.T) {
-<span id="L11" class="ln">    11  </span>	assert.NotNil(t, net.DefaultResolver)
-<span id="L12" class="ln">    12  </span>}
-<span id="L13" class="ln">    13  </span>
+<span id="L11" class="ln">    11  </span>	t.Parallel()
+<span id="L12" class="ln">    12  </span>	assert.NotNil(t, net.DefaultResolver)
+<span id="L13" class="ln">    13  </span>}
+<span id="L14" class="ln">    14  </span>
 </pre><p></p>
 
 <div id="footer">
