--- a/dns/src/github.com/johnstarich/go/dns/testhelpers/dns.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/testhelpers/dns.go.html
@@ -109,7 +109,7 @@
 <span id="L52" class="ln">    52  </span>}
 <span id="L53" class="ln">    53  </span>
 <span id="L54" class="ln">    54  </span><span class="comment">// StartDNSServer starts a DNS server with the given configuration</span>
-<span id="L55" class="ln">    55  </span>func StartDNSServer(t *testing.T, config DNSConfig) (address string, cancel context.CancelFunc) {
+<span id="L55" class="ln">    55  </span>func StartDNSServer(t *testing.T, config DNSConfig) string {
 <span id="L56" class="ln">    56  </span>	t.Helper()
 <span id="L57" class="ln">    57  </span>	const (
 <span id="L58" class="ln">    58  </span>		netUDP4 = &#34;udp4&#34;
@@ -125,36 +125,44 @@
 <span id="L68" class="ln">    68  </span>	}
 <span id="L69" class="ln">    69  </span>
 <span id="L70" class="ln">    70  </span>	ctx, cancel := context.WithCancel(context.Background())
-<span id="L71" class="ln">    71  </span>	mux := dns.NewServeMux()
-<span id="L72" class="ln">    72  </span>	mux.HandleFunc(&#34;local.&#34;, hostnamesHandler(ctx, t, config.ResponseDelay, config.Hostnames))
-<span id="L73" class="ln">    73  </span>
-<span id="L74" class="ln">    74  </span>	packetConn, err := net.ListenUDP(config.Network, &amp;net.UDPAddr{Port: config.Port})
-<span id="L75" class="ln">    75  </span>	require.NoError(t, err)
-<span id="L76" class="ln">    76  </span>	server := &amp;dns.Server{
-<span id="L77" class="ln">    77  </span>		Net:        config.Network,
-<span id="L78" class="ln">    78  </span>		PacketConn: packetConn,
-<span id="L79" class="ln">    79  </span>		Handler:    mux,
-<span id="L80" class="ln">    80  </span>	}
-<span id="L81" class="ln">    81  </span>	go func() {
-<span id="L82" class="ln">    82  </span>		err := server.ActivateAndServe()
-<span id="L83" class="ln">    83  </span>		require.NoError(t, err)
-<span id="L84" class="ln">    84  </span>	}()
-<span id="L85" class="ln">    85  </span>	go func() {
-<span id="L86" class="ln">    86  </span>		&lt;-ctx.Done()
-<span id="L87" class="ln">    87  </span>		_ = server.Shutdown()
-<span id="L88" class="ln">    88  </span>	}()
-<span id="L89" class="ln">    89  </span>	localAddr := server.PacketConn.LocalAddr().String()
-<span id="L90" class="ln">    90  </span>	_, port, err := net.SplitHostPort(localAddr)
-<span id="L91" class="ln">    91  </span>	require.NoError(t, err)
-<span id="L92" class="ln">    92  </span>	switch config.Network {
-<span id="L93" class="ln">    93  </span>	case netUDP4:
-<span id="L94" class="ln">    94  </span>		localAddr = &#34;127.0.0.1:&#34; + port
-<span id="L95" class="ln">    95  </span>	case netUDP6:
-<span id="L96" class="ln">    96  </span>		localAddr = &#34;[::1]:&#34; + port
-<span id="L97" class="ln">    97  </span>	}
-<span id="L98" class="ln">    98  </span>	return localAddr, cancel
-<span id="L99" class="ln">    99  </span>}
-<span id="L100" class="ln">   100  </span>
+<span id="L71" class="ln">    71  </span>	t.Cleanup(cancel)
+<span id="L72" class="ln">    72  </span>	mux := dns.NewServeMux()
+<span id="L73" class="ln">    73  </span>	mux.HandleFunc(&#34;local.&#34;, hostnamesHandler(ctx, t, config.ResponseDelay, config.Hostnames))
+<span id="L74" class="ln">    74  </span>
+<span id="L75" class="ln">    75  </span>	packetConn, err := net.ListenUDP(config.Network, &amp;net.UDPAddr{Port: config.Port})
+<span id="L76" class="ln">    76  </span>	require.NoError(t, err)
+<span id="L77" class="ln">    77  </span>	ready := make(chan struct{})
+<span id="L78" class="ln">    78  </span>	server := &amp;dns.Server{
+<span id="L79" class="ln">    79  </span>		Net:               config.Network,
+<span id="L80" class="ln">    80  </span>		PacketConn:        packetConn,
+<span id="L81" class="ln">    81  </span>		Handler:           mux,
+<span id="L82" class="ln">    82  </span>		NotifyStartedFunc: func() { close(ready) },
+<span id="L83" class="ln">    83  </span>	}
+<span id="L84" class="ln">    84  </span>	go func() {
+<span id="L85" class="ln">    85  </span>		err := server.ActivateAndServe()
+<span id="L86" class="ln">    86  </span>		require.NoError(t, err)
+<span id="L87" class="ln">    87  </span>	}()
+<span id="L88" class="ln">    88  </span>	go func() {
+<span id="L89" class="ln">    89  </span>		&lt;-ctx.Done()
+<span id="L90" class="ln">    90  </span>		_ = server.Shutdown()
+<span id="L91" class="ln">    91  </span>	}()
+<span id="L92" class="ln">    92  </span>	select {
+<span id="L93" class="ln">    93  </span>	case &lt;-ctx.Done():
+<span id="L94" class="ln">    94  </span>		t.Fatal(ctx.Err())
+<span id="L95" class="ln">    95  </span>	case &lt;-ready:
+<span id="L96" class="ln">    96  </span>	}
+<span id="L97" class="ln">    97  </span>	localAddr := server.PacketConn.LocalAddr().String()
+<span id="L98" class="ln">    98  </span>	_, port, err := net.SplitHostPort(localAddr)
+<span id="L99" class="ln">    99  </span>	require.NoError(t, err)
+<span id="L100" class="ln">   100  </span>	switch config.Network {
+<span id="L101" class="ln">   101  </span>	case netUDP4:
+<span id="L102" class="ln">   102  </span>		localAddr = &#34;127.0.0.1:&#34; + port
+<span id="L103" class="ln">   103  </span>	case netUDP6:
+<span id="L104" class="ln">   104  </span>		localAddr = &#34;[::1]:&#34; + port
+<span id="L105" class="ln">   105  </span>	}
+<span id="L106" class="ln">   106  </span>	return localAddr
+<span id="L107" class="ln">   107  </span>}
+<span id="L108" class="ln">   108  </span>
 </pre><p></p>
 
 <div id="footer">
