--- a/pipe/pkg/github.com/johnstarich/go/index.html
+++ b/pipe/pkg/github.com/johnstarich/go/index.html
@@ -91,7 +91,7 @@
 					</td>
 				
 					<td class="pkg-synopsis">
-						
+						Package pipe handles errors so you don&#39;t have to.
 					</td>
 				</tr>
 			
