--- a/dns/src/github.com/johnstarich/go/dns/index.html
+++ b/dns/src/github.com/johnstarich/go/dns/index.html
@@ -79,7 +79,7 @@
 	<td></td>
 	<td align="right">1381</td>
 	<td></td>
-	<td align="left">2022-11-23 07:18:38.673154453 +0000 UTC</td>
+	<td align="left">2022-12-01 03:46:59.56524643 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -88,7 +88,7 @@
 	<td></td>
 	<td align="right">272</td>
 	<td></td>
-	<td align="left">2022-11-23 07:18:38.673154453 +0000 UTC</td>
+	<td align="left">2022-12-01 03:46:59.56524643 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -97,7 +97,7 @@
 	<td></td>
 	<td align="right">6596</td>
 	<td></td>
-	<td align="left">2022-11-23 07:18:38.673154453 +0000 UTC</td>
+	<td align="left">2022-12-01 03:46:59.569246435 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -106,7 +106,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-11-23 07:18:38.673154453 +0000 UTC</td>
+	<td align="left">2022-12-01 03:46:59.569246435 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -115,7 +115,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-11-23 07:18:38.673154453 +0000 UTC</td>
+	<td align="left">2022-12-01 03:46:59.569246435 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -124,16 +124,16 @@
 	<td></td>
 	<td align="right">7185</td>
 	<td></td>
-	<td align="left">2022-11-23 07:18:38.673154453 +0000 UTC</td>
+	<td align="left">2022-12-01 03:46:59.569246435 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="resolver_test.go">resolver_test.go</a></td>
 	<td></td>
-	<td align="right">7541</td>
+	<td align="right">7506</td>
 	<td></td>
-	<td align="left">2022-11-23 07:18:38.673154453 +0000 UTC</td>
+	<td align="left">2022-12-01 03:46:59.569246435 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -142,7 +142,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-11-23 07:18:38.673154453 +0000 UTC</td>
+	<td align="left">2022-12-01 03:46:59.569246435 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -151,7 +151,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-11-23 07:18:38.673154453 +0000 UTC</td>
+	<td align="left">2022-12-01 03:46:59.569246435 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -160,7 +160,16 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-11-23 07:18:38.673154453 +0000 UTC</td>
+	<td align="left">2022-12-01 03:46:59.569246435 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="testlogger_test.go">testlogger_test.go</a></td>
+	<td></td>
+	<td align="right">1335</td>
+	<td></td>
+	<td align="left">2022-12-01 03:46:59.569246435 +0000 UTC</td>
 </tr>
 
 
